Added missing xhtml.jar file and updated readme